--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styleAll.css">
+    <link rel="stylesheet" href="./styles/styleAll.css">
     <title>Pixel Team - Home</title>
 </head>
 <body>
     <div class="home">
         <div class="screen-section top-section">
-            <img src="../assets/images/imgHome/pixelTeam3.png" alt="Pixel Team" class="pixel-team-image">
+            <img src="./assets/images/imgHome/pixelTeam3.png" alt="Pixel Team" class="pixel-team-image">
         </div>
         <div class="screen-section middle-section">
             <div class="intro-text">
@@ -23,13 +23,13 @@
         </div>
         <div class="screen-section bottom-section">
             <button class="start-button">
-                <img src="../assets/images/imgHome/startBtn.png" alt="Start">
+                <img src="./assets/images/imgHome/startBtn.png" alt="Start">
             </button>
         </div>
     </div>
 
     <audio id="beep-sound" src="../assets/sound/beep.mp3"></audio>
 
-    <script src="../js/scriptHome.js"></script>
+    <script src="./js/scriptHome.js"></script>
 </body>
 </html>
