--- a/html/KhacBaoPage.html
+++ b/html/KhacBaoPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khắc Bảo - CV Digital XP</title>
-    <link rel="stylesheet" href="../styles/menuStyle.css">
+    <link rel="stylesheet" href="/WEB-CV_Digital/styles/menuStyle.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <!-- Font Awesome để thêm icon Instagram, Facebook, Github -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -24,7 +24,7 @@
             </div>
 
             <div class="top-menu-bar">
-                <a href="../html/main.html" class="menu-item active" data-section="home">Home</a>
+                <a href="/WEB-CV_Digital/html/main.html" class="menu-item active" data-section="home">Home</a>
                 <a href="#" class="menu-item" data-section="info">Thông tin</a>
                 <a href="#" class="menu-item" data-section="objective">Mục tiêu nghề nghiệp</a>
                 <a href="#" class="menu-item" data-section="hobbies">Sở thích</a>
@@ -37,7 +37,7 @@
             <div class="window-content main-content-home">
                 <!-- Phần intro-box ở trên đầu tiên -->
                 <div class="intro-box">
-                    <img src="../assets/images/imgBaoPage/hoanghon1.jpg" alt="Khắc Bảo" class="avatar-placeholder">
+                    <img src="/WEB-CV_Digital/assets/images/imgBaoPage/hoanghon1.jpg" alt="Khắc Bảo" class="avatar-placeholder">
                     <h1>Xin chào, tôi là Khắc Bảo! Là <span>Designer</span>, <span>Developer</span> and <span>Content Creator</span></h1>
                     <p>Chào mừng bạn đến với CV kỹ thuật số của tôi.</p>
                     <p>Là một IT-Student của Trường Đại Học Giao Thông Vận Tải TP. HCM.</p>
@@ -51,10 +51,10 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/hoanghon1.jpg" alt="img1">
-                        <img src="../assets/images/imgBaoPage/hoanghon2.jpg" alt="img2">
-                        <img src="../assets/images/imgBaoPage/hoanghon3.jpg" alt="img3">
-                        <img src="../assets/images/imgBaoPage/hoanghon4.jpg" alt="img4">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/hoanghon1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/hoanghon2.jpg" alt="img2">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/hoanghon3.jpg" alt="img3">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/hoanghon4.jpg" alt="img4">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -75,7 +75,7 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/thadieu1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/thadieu1.jpg" alt="img1">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -96,8 +96,8 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/banhmi1.jpg" alt="img1">
-                        <img src="../assets/images/imgBaoPage/banhmi2.jpg" alt="img2">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/banhmi1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/banhmi2.jpg" alt="img2">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -118,7 +118,7 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/tiengiang1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/tiengiang1.jpg" alt="img1">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -139,8 +139,8 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/nganhang1.jpg" alt="img1">
-                        <img src="../assets/images/imgBaoPage/nganhang2.jpg" alt="img2">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/nganhang1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/nganhang2.jpg" alt="img2">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -161,7 +161,7 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/metro1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/metro1.jpg" alt="img1">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -182,10 +182,10 @@
                         <div class="options-dots">...</div>
                     </div>
                     <div class="instagram-mock-image-area">
-                        <img src="../assets/images/imgBaoPage/aovang1.jpg" alt="img1">
-                        <img src="../assets/images/imgBaoPage/aovang2.jpg" alt="img2">
-                        <img src="../assets/images/imgBaoPage/aovang3.jpg" alt="img3">
-                        <img src="../assets/images/imgBaoPage/aovang4.jpg" alt="img4">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/aovang1.jpg" alt="img1">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/aovang2.jpg" alt="img2">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/aovang3.jpg" alt="img3">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/aovang4.jpg" alt="img4">
                     </div>
                     <div class="instagram-mock-footer">
                         <div class="instagram-mock-actions">
@@ -254,14 +254,14 @@
                 <h2>Sở thích</h2>
                 <div class="info-grid">
                     <div class="info-item">Chơi game và tìm hiểu phát triển game
-                        <img src="../assets/images/imgBaoPage/gameimg2.jpg" alt="">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/gameimg2.jpg" alt="">
 
                     </div>
                     <div class="info-item">Đi phượt và du lịch</div>
                     <div class="info-item">Xem phim
-                        <img src="../assets/images/imgBaoPage/film1.jpg" alt="">
-                        <img src="../assets/images/imgBaoPage/film2.jpg" alt="">
-                        <img src="../assets/images/imgBaoPage/film3.jpg" alt="">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/film1.jpg" alt="">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/film2.jpg" alt="">
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/film3.jpg" alt="">
                     </div>
                     <div class="info-item">Ngủ dưới thời tiết mưa</div>
                 </div>
@@ -332,7 +332,7 @@
                 <h2>Chứng chỉ & Giải thưởng</h2>
                 <div class="info-grid">
                     <div class="info-item"><strong>Chứng chỉ hoàn thành khóa học C++</strong>
-                        <img src="../assets/images/imgBaoPage/chungChiC++.png" alt="chungChiIMG"> 
+                        <img src="/WEB-CV_Digital/assets/images/imgBaoPage/chungChiC++.png" alt="chungChiIMG"> 
                     </div>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                         <div class="project-item">
                             <h3>Dự án 1: WEB bán hàng điện tử "CapyPhone Store"</h3>
                             <p>Dự án về 1 trang web bán điện tử cơ bản bằng HTML5, CSS3, JS. Vai trò: Developer, Designer....</p>
-                            <img src="../assets/images/imgBaoPage/project1.jpg" alt=""> <br>
+                            <img src="/WEB-CV_Digital/assets/images/imgBaoPage/project1.jpg" alt=""> <br>
                             <a href="#" target="_blank">Xem dự án</a>
                         </div>
                     </div>
@@ -362,7 +362,7 @@
                         <div class="project-item">
                             <h3>Dự án 2: App quản lí chi tiêu đơn giản</h3>
                             <p>Là một app quản lí chi tiêu với các chức năng cơ bản bằng Android Studio với Java. Vai trò: Dev, Design,...</p>
-                            <img src="../assets/images/imgBaoPage/project2.jpg" alt=""> <br>
+                            <img src="/WEB-CV_Digital/assets/images/imgBaoPage/project2.jpg" alt=""> <br>
                             <a href="#" target="_blank">Xem dự án</a>
                         </div>
                     </div>
@@ -407,7 +407,7 @@
     <!-- Thanh Taskbar cố định ở dưới cùng (nơi hiển thị các cửa sổ đang mở/thu nhỏ) -->
     <div id="taskbar" class="taskbar">
         <div>
-            <a href="../html/main.html">
+            <a href="/WEB-CV_Digital/html/main.html">
                 <i class="fa-solid fa-house"></i>
             </a>
         </div>
@@ -419,6 +419,6 @@
         </div>
     </div>
 
-    <script src="../js/jsBao.js"></script>
+    <script src="/WEB-CV_Digital/js/jsBao.js"></script>
 </body>
 </html>
