--- a/html/MinhThuPage.html
+++ b/html/MinhThuPage.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../styles/styleThu.css">
+    <link rel="stylesheet" href="/WEB-CV_Digital/styles/styleThu.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -18,7 +18,7 @@
                 <span>CV</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="../html/main.html" class="home">Home</a></li>
+                <li><a href="/WEB-CV_Digital/html/main.html" class="home">Home</a></li>
                 <li><a href="#profile" class="nav-link">Thông tin</a></li>
                 <li><a href="#objective" class="nav-link">Mục tiêu</a></li>
                 <li><a href="#education" class="nav-link">Học vấn</a></li>
@@ -41,7 +41,7 @@
         <aside class="sidebar">
             <div class="profile-section">
                 <div class="profile-img-wrapper">
-                    <img src="../assets/images/imgThuPage/canhan.jpg" alt="Tô Thị Minh Thư" class="profile-img">
+                    <img src="/WEB-CV_Digital/assets/images/imgThuPage/canhan.jpg" alt="Tô Thị Minh Thư" class="profile-img">
                 </div>
                 <h1 class="profile-name">Tô Thị Minh Thư</h1>
                 <p class="profile-title">Sinh viên Công nghệ thông tin</p>
@@ -63,14 +63,14 @@
             <div class="album-thumbnail">
             <h2>📁 Album Ảnh Cá Nhân</h2>
             <div class="thumbnail-grid">
-                <img src="../assets/images/imgThuPage/album/thumb1.jpg" class="thumb" data-full="images/album/fullsize1.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb3.jpg" class="thumb" data-full="images/album/fullsize3.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb4.jpg" class="thumb" data-full="images/album/fullsize4.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb5.jpg" class="thumb" data-full="images/album/fullsize5.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb6.jpg" class="thumb" data-full="images/album/fullsize6.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb7.jpg" class="thumb" data-full="images/album/fullsize7.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb8.jpg" class="thumb" data-full="images/album/fullsize8.jpg">
-                <img src="../assets/images/imgThuPage/album/thumb9.jpg" class="thumb" data-full="images/album/fullsize9.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb1.jpg" class="thumb" data-full="images/album/fullsize1.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb3.jpg" class="thumb" data-full="images/album/fullsize3.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb4.jpg" class="thumb" data-full="images/album/fullsize4.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb5.jpg" class="thumb" data-full="images/album/fullsize5.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb6.jpg" class="thumb" data-full="images/album/fullsize6.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb7.jpg" class="thumb" data-full="images/album/fullsize7.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb8.jpg" class="thumb" data-full="images/album/fullsize8.jpg">
+                <img src="/WEB-CV_Digital/assets/images/imgThuPage/album/thumb9.jpg" class="thumb" data-full="images/album/fullsize9.jpg">
             </div>
             <button id="download-all" class="download-btn">
                 <i class="fas fa-download"></i> Tải toàn bộ ảnh
@@ -234,9 +234,9 @@
                     </div>
                     <p class="education-major">Chuyên ngành: Công Nghệ Thông Tin</p>
                     <div class="university-logo">
-                        <img src="images/UTH1.jpg" alt="UTH Logo" class="university-img">
-                        <img src="images/UTH2.jpg" alt="UTH Logo" class="university-img">
-                        <img src="images/UTH3.jpg" alt="UTH Logo" class="university-img">
+                        <img src="/WEB-CV_Digital/assets/images/imgThuPage/UTH1.jpg" alt="UTH Logo" class="university-img">
+                        <img src="/WEB-CV_Digital/assets/images/imgThuPage/UTH2.jpg" alt="UTH Logo" class="university-img">
+                        <img src="/WEB-CV_Digital/assets/images/imgThuPage/UTH3.jpg" alt="UTH Logo" class="university-img">
                     </div>
                 </div>
             </section>
@@ -451,7 +451,7 @@
         </main>
     </div>
     
-    <script src="../js/JSThu.js"></script>
+    <script src="/WEB-CV_Digital/js/JSThu.js"></script>
 </body>
 </html>
 </html>
