--- a/html/NgocThiPage.html
+++ b/html/NgocThiPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="stylesheet" href="../styles/styleThi.css">
+    <link rel="stylesheet" href="/WEB-CV_Digital/styles/styleThi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="sidebar">
             <nav class="nav">
-                <a href="../html/main.html" class="nav-item">Home</a>
+                <a href="/WEB-CV_Digital/html/main.html" class="nav-item">Home</a>
                 <a href="#objective" class="nav-item">Mục tiêu</a>
                 <a href="#skills" class="nav-item">Kỹ năng</a>
                 <a href="#awards" class="nav-item">Giải thưởng</a>
@@ -25,7 +25,7 @@
         <div class="content">
             <div class="left-column">
                 <div class="image">
-                    <img src="../assets/images/imgThiPage/avt.jpg" alt="Ảnh CV" class="profile-image">
+                    <img src="/WEB-CV_Digital/assets/images/imgThiPage/avt.jpg" alt="Ảnh CV" class="profile-image">
                 </div>
                 
                 <h1 class="first">LÊ THỊ</h1>
@@ -93,15 +93,15 @@
                     <h2>Giải thưởng & Chứng nhận</h2>
                     <div class="images">
                        <div class="award">
-                            <img src="../assets/images/imgThiPage/tstnam23-24.jpg">
+                            <img src="/WEB-CV_Digital/assets/images/imgThiPage/tstnam23-24.jpg">
                             <p>Top 10 cuộc thi Tỏa sáng tài năng âm nhạc 2023-2024 </p>
                         </div>
                         <div class="award">
-                            <img src="../assets/images/imgThiPage/tstnam24-25.jpg">
+                            <img src="/WEB-CV_Digital/assets/images/imgThiPage/tstnam24-25.jpg">
                             <p>Top 10 cuộc thi Tỏa sáng tài năng âm nhạc 2024-2025</p>
                         </div>
                         <div class="award">
-                            <img src="../assets/images/imgThiPage/flashmob.jpg">
+                            <img src="/WEB-CV_Digital/assets/images/imgThiPage/flashmob.jpg">
                             <p>Giải khuyến khích Flashmob UTH 2024</p>
                         </div> 
                     </div>
@@ -115,15 +115,15 @@
                         <br>
                         <li>Công cụ: VS Code, Git, Python, Figma (thiết kế giao diện)</li>
                         <br>
-                        <img src="../assets/images/imgThiPage/project1.jpg">
-                        <img src="../assets/images/imgThiPage/project1.3.jpg">
+                        <img src="/WEB-CV_Digital/assets/images/imgThiPage/project1.jpg">
+                        <img src="/WEB-CV_Digital/assets/images/imgThiPage/project1.3.jpg">
                         
                         <h3>Dự án 2: Xây dựng Website bán hàng điện tử</h3>
                         <li>Xây dựng được một website thương mại điện tử chuyên bán các sản phẩm điện tử như điện thoại, laptop, máy tính bảng, phụ kiện,... Website hỗ trợ người dùng tìm kiếm, xem chi tiết sản phẩm, mua hàng và thanh toán online.</li>
                         <br>
                         <li>Công cụ:HTML, CSS, JS, java, IDE VS Code</li>
                         <br>
-                        <img src="../assets/images/imgThiPage/project2.jpg">
+                        <img src="/WEB-CV_Digital/assets/images/imgThiPage/project2.jpg">
                     </ul>
                 </section>
 
@@ -138,6 +138,6 @@
             </div>
         </div>
     </div>
-    <script src="../js/JSThi.js"></script>
+    <script src="/WEB-CV_Digital/js/JSThi.js"></script>
 </body>
 </html>
