--- a/html/VanPhongPage.html
+++ b/html/VanPhongPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV - Nguyễn Văn Phong</title>
-  <link rel="stylesheet" href="../styles/stylePhong.css">
+  <link rel="stylesheet" href="/WEB-CV_Digital/styles/stylePhong.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
       <!-- Class 'show-icons' sẽ được JS thêm/bỏ vào wrapper này khi click -->
       <div class="avatar-flex-wrapper">
         <div class="profile-pic" id="avatarProfilePic"> <!-- THÊM ID ĐỂ JS DỄ CHỌN -->
-          <img src="../assets/images/imgPhongPage/avata.png" alt="Ảnh cá nhân của Nguyễn Văn Phong">
+          <img src="/WEB-CV_Digital/assets/images/imgPhongPage/avata.png" alt="Ảnh cá nhân của Nguyễn Văn Phong">
         </div>
         <div class="social-icons-on-avatar" id="socialIconsOnAvatar">
             <a href="https://github.com/githubofphong" target="_blank" class="social-icon" title="GitHub"><i class="fab fa-github"></i></a>
@@ -51,7 +51,7 @@
     <a href="#projects">Dự án</a>
     <a href="#awards">Chứng chỉ</a>
     <a href="#contact">Liên hệ</a>
-    <a href="../html/main.html">Quay lại</a>
+    <a href="/WEB-CV_Digital/html/main.html">Quay lại</a>
   </nav>
 
   <main class="container">
@@ -172,9 +172,9 @@
                        Tìm hiểu về database (MySQL/HediSQL) của game, logic server (Java), và vận hành bằng file batch (.bat).
                    </p>
                    <div class="hobby-image-wrapper">
-                       <img src="../assets/images/imgPhongPage/imgcmdnro.png" alt="Ảnh minh họa chơi game Ngọc Rồng"> 
-                       <img src="../assets/images/imgPhongPage/imgrungamenro.png" alt="Ảnh minh họa chơi game Ngọc Rồng">
-                       <img src="../assets/images/imgPhongPage/imgrungamenro2.png" alt="Ảnh minh họa chơi game Ngọc Rồng">
+                       <img src="/WEB-CV_Digital/assets/images/imgPhongPage/imgcmdnro.png" alt="Ảnh minh họa chơi game Ngọc Rồng"> 
+                       <img src="/WEB-CV_Digital/assets/images/imgPhongPage/imgrungamenro.png" alt="Ảnh minh họa chơi game Ngọc Rồng">
+                       <img src="/WEB-CV_Digital/assets/images/imgPhongPage/imgrungamenro2.png" alt="Ảnh minh họa chơi game Ngọc Rồng">
                    </div>
                </div>
              </li>
@@ -189,7 +189,7 @@
 
         <div class="project-card">
           <div class="project-image-wrapper">
-            <img src="../assets/images/imgPhongPage/homeappecom.png" alt="Ảnh demo giao diện ứng dụng TMDT Android" class="project-img responsive-img">
+            <img src="/WEB-CV_Digital/assets/images/imgPhongPage/homeappecom.png" alt="Ảnh demo giao diện ứng dụng TMDT Android" class="project-img responsive-img">
           </div>
           <h3>Ứng dụng TMDT (Android App)</h3>
           <p>Mô tả: Dự án phát triển ứng dụng mua sắm trực tuyến trên nền tảng Android, bao gồm các chức năng xem danh mục sản phẩm, tìm kiếm, thêm vào giỏ hàng và tiến hành đặt hàng cơ bản.</p>
@@ -203,7 +203,7 @@
 
         <div class="project-card">
           <div class="project-image-wrapper">
-            <img src="../assets/images/imgPhongPage/bookstore.png" alt="Ảnh demo giao diện ứng dụng bán sách Android" class="project-img responsive-img">
+            <img src="/WEB-CV_Digital/assets/images/imgPhongPage/bookstore.png" alt="Ảnh demo giao diện ứng dụng bán sách Android" class="project-img responsive-img">
           </div>
           <h3>Ứng dụng bán sách (Android App)</h3>
           <p>Mô tả: Dự án phát triển ứng dụng mua sắm sách trực tuyến trên nền tảng Android, cho phép người dùng xem danh mục sách, chi tiết sách và thêm sách vào giỏ hàng.</p>
@@ -290,7 +290,7 @@
   </script>
 
   <!-- Link script JS cho hiệu ứng hạt và click avatar -->
-   <script src="../js/JSPhong.js"></script>
+   <script src="/WEB-CV_Digital/js/JSPhong.js"></script>
 
 </body>
 
