--- a/html/baohanPage.html
+++ b/html/baohanPage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV của [Tên của bạn] - Win XP Pastel Edition</title>
-    <link rel="stylesheet" href="../styles/styleHan.css">
+    <title>CV Bảo Hân - Win XP</title>
+    <link rel="stylesheet" href="/WEB-CV_Digital/styles/styleHan.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -37,7 +37,7 @@
                     <h1>Xin chào, tôi là BẢO HÂN!</h1>
                     <p class="typewriter-effect">Chào mừng bạn đến với CV Win XP của tôi.</p>
                     <div class="avatar-container">
-                        <img src="../assets/images/imgHanPage/avt.jpg" alt="Your Avatar" class="avatar">
+                        <img src="/WEB-CV_Digital/assets/images/imgHanPage/avt.jpg" alt="Your Avatar" class="avatar">
                     </div>
                     <button class="win-button minimize-btn" data-target="about-window">Tìm hiểu thêm về tôi</button>
                 </div>
@@ -177,16 +177,16 @@ Tôi luôn tìm kiếm cơ hội học hỏi, tham gia các dự án thực tế
                     <div class="carousel-container">
                         <div class="carousel-track">
                             <div class="carousel-item">
-                                <img src="../assets/images/imgHanPage/phtoHan1.jpg" alt="">
+                                <img src="/WEB-CV_Digital/assets/images/imgHanPage/phtoHan1.jpg" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/images/imgHanPage/phtoHan2.jpg" alt="">
+                                <img src="/WEB-CV_Digital/assets/images/imgHanPage/phtoHan2.jpg" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/images/imgHanPage/phtoHan3.jpg" alt="">
+                                <img src="/WEB-CV_Digital/assets/images/imgHanPage/phtoHan3.jpg" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/images/imgHanPage/phtoHan4.jpg" alt="">
+                                <img src="/WEB-CV_Digital/assets/images/imgHanPage/phtoHan4.jpg" alt="">
                             </div>
                         </div>
                         <button class="carousel-button prev">&#10094;</button>
@@ -209,7 +209,7 @@ Tôi luôn tìm kiếm cơ hội học hỏi, tham gia các dự án thực tế
                     <div class="project-grid">
                         <div class="project-card">
                             <h3>App quản lí chi tiêu</h3>
-                            <img src="../assets/images/imgBaoPage/project2.jpg" alt="Dự án 1">
+                            <img src="/WEB-CV_Digital/assets/images/imgBaoPage/project2.jpg" alt="Dự án 1">
                             <p>Dự án sử dụng Android Studio</p>
                             <a href="#" target="_blank" class="win-button">Xem dự án</a>
                         </div>
@@ -262,6 +262,6 @@ Tôi luôn tìm kiếm cơ hội học hỏi, tham gia các dự án thực tế
             </ul>
         </div>
 
-    </div> <script src="../js/jsHan.js"></script>
+    </div> <script src="/WEB-CV_Digital/js/jsHan.js"></script>
 </body>
 </html>
