--- a/html/main.html
+++ b/html/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styleAll.css">
+    <link rel="stylesheet" href="/WEB-CV_Digital/styles/styleAll.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Pixel Team - Main</title>
@@ -24,19 +24,19 @@
         <div class="dummy-member-select-container">
             <div class="dummy-member-select">
                 <div class="dummy-member" data-member="1">
-                    <img src="../assets/images/posterMember/poster-bao.png" alt="KhacBao">
+                    <img src="/WEB-CV_Digital/assets/images/posterMember/poster-bao.png" alt="KhacBao">
                 </div>
                 <div class="dummy-member" data-member="2">
-                    <img src="../assets/images/posterMember/poster-thi.png" alt="NgocThi">
+                    <img src="/WEB-CV_Digital/assets/images/posterMember/poster-thi.png" alt="NgocThi">
                 </div>
                 <div class="dummy-member" data-member="3">
-                    <img src="../assets/images/posterMember/poster-han.png" alt="BaoHan">
+                    <img src="/WEB-CV_Digital/assets/images/posterMember/poster-han.png" alt="BaoHan">
                 </div>
                 <div class="dummy-member" data-member="4">
-                    <img src="../assets/images/posterMember/poster-thu.png" alt="MinhThu">
+                    <img src="/WEB-CV_Digital/assets/images/posterMember/poster-thu.png" alt="MinhThu">
                 </div>
                 <div class="dummy-member" data-member="5">
-                    <img src="../assets/images/posterMember/poster-phong.png" alt="VanPhong">
+                    <img src="/WEB-CV_Digital/assets/images/posterMember/poster-phong.png" alt="VanPhong">
                 </div>
             </div>
             <div id="selection-text" class="selection-text">Hãy chọn một nhân vật!</div>
@@ -65,23 +65,23 @@
             <div class="member-sidebar-bottom" style="grid-area: member;">
                 <div class="member-select">
                     <div class="member" data-member="1">
-                        <img src="../assets/images/posterMember/poster-bao.png" alt="KhacBao">
+                        <img src="/WEB-CV_Digital/assets/images/posterMember/poster-bao.png" alt="KhacBao">
                         <div class="member-name">KhacBao<div class="nickName">Leader kiêu kì</div></div>
                     </div>
                     <div class="member" data-member="2">
-                        <img src="../assets/images/posterMember/poster-thi.png" alt="NgocThi">
+                        <img src="/WEB-CV_Digital/assets/images/posterMember/poster-thi.png" alt="NgocThi">
                         <div class="member-name">NgocThi<div class="nickName">Gamer háo thắng</div></div>
                     </div>
                     <div class="member" data-member="3">
-                        <img src="../assets/images/posterMember/poster-han.png" alt="BaoHan">
+                        <img src="/WEB-CV_Digital/assets/images/posterMember/poster-han.png" alt="BaoHan">
                         <div class="member-name">BaoHan<div class="nickName">Tiktoker quyến rủ</div></div>
                     </div>
                     <div class="member" data-member="4">
-                        <img src="../assets/images/posterMember/poster-thu.png" alt="MinhThu">
+                        <img src="/WEB-CV_Digital/assets/images/posterMember/poster-thu.png" alt="MinhThu">
                         <div class="member-name">MinhThu<div class="nickName">Nàng thơ yêu kiều</div></div>
                     </div>
                     <div class="member" data-member="5">
-                        <img src="../assets/images/posterMember/poster-phong.png" alt="VanPhong">
+                        <img src="/WEB-CV_Digital/assets/images/posterMember/poster-phong.png" alt="VanPhong">
                         <div class="member-name">VanPhong<div class="nickName">Developer thần tốc</div></div>
                     </div>
                 </div>
@@ -90,6 +90,6 @@
     </div>
 
 
-    <script src="../js/scriptMain.js"></script>
+    <script src="/WEB-CV_Digital/js/scriptMain.js"></script>
 </body>
 </html>
